# civ

./: LICENSE  README.md  civ.cabal
src/: Board.hs  Drawing.hs  GameState.hs  Main.hs  Textures.hs
