name:                civ
version:             0.1.0.0
synopsis:            Civilization-like game in Haskell.
homepage:            http://github.com/joom/civ
license:             MIT
license-file:        LICENSE
author:              Joomy Korkut
maintainer:          joomy@cattheory.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable civ
  main-is:             Main.hs
  other-modules:       Board, Drawing, GameState
  build-depends:       base >=4.7 && <4.8
                     , grid >=7
                     , GLFW-b == 1.4.6
                     , text == 1.2.0.4
                     , bytestring
                     , gloss == 1.9.2.1
                     , gloss-rendering == 1.9.2.1
                     , QuickCheck >= 2.8
                     , mtl >= 2.1
                     , stm >= 2.4
                     , transformers >= 0.3
  hs-source-dirs:      src
  default-language:    Haskell2010

